--- a/app/components/navigation.hbs
+++ b/app/components/navigation.hbs
@@ -22,12 +22,11 @@
             Gebouwen
           </AuNavLink>
         </li>
-        {{!-- <li class="au-c-list-responsive__item">
-          <a href="#!" target="_blank" class="au-c-nav-link">
-            <AuIcon @icon="manual" @alignment="left" />
-            Handleiding
-          </a>
-        </li> --}}
+        <li class="au-c-list-responsive__item">
+          <AuNavLink @linkRoute="developers.intro">
+            Voor ontwikkelaars
+          </AuNavLink>
+        </li>
       </ul>
     </nav>
   </AuToolbarGroup>
