--- a/app/templates/buildings.hbs
+++ b/app/templates/buildings.hbs
@@ -22,31 +22,145 @@
           </div>
           <div class="au-o-grid__item au-u-3-4@medium">
             <AuContent id="content" class="au-u-margin-bottom-small">
-              <p>De volgende musea hebben toegankelijkheidsinformatie:</p>
+              <p>Er is een toegankelijkheidswijzer beschikbaar voor volgende musea:</p>
             </AuContent>
             <ul class="au-o-grid au-o-grid--tiny">
-              {{#each @model as |widget|}}
-                <li class="au-o-grid__item">
-                  <article class="au-c-card">
-                    <AuToolbar @border="bottom" @size="small">
-                      <AuToolbarGroup>
-                        <AuHeading @level="2" @skin="4">
-                          {{widget.pointOfInterest.label}}
-                        </AuHeading>
-                      </AuToolbarGroup>
-                      <AuToolbarGroup>
-                        <p>
-                          URI:
-                          <AuPill>
-                            {{widget.uri}}
-                          </AuPill>
-                        </p>
-                      </AuToolbarGroup>
-                    </AuToolbar>
-                  </article>
-                </li>
-              {{/each}}
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://dewereldvankina.stad.gent/toegankelijkheid" class="au-c-link">De wereld van Kina: het Huis</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://huisvanalijn.be/nl/toegankelijkheid" class="au-c-link">Huis van Alijn</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://smak.be/toegankelijkheid" class="au-c-link">S.M.A.K. Gent</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://dewereldvankina.stad.gent/toegankelijkheid" class="au-c-link">De wereld van Kina: de Tuin</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.mskgent.be/nl/toegankelijkheid" class="au-c-link">MSK Gent - Museum voor Schone Kunsten Gent</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.museumdrguislain.be/nl/toegankelijkheid" class="au-c-link">Museum Dr. Guislain</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.gum.gent/nl/toegankelijkheid" class="au-c-link">GUM - Gents Universiteitsmuseum</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.designmuseumgent.be/toegankelijkheid" class="au-c-link">Design Museum Gent</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.industriemuseum.be/nl/toegankelijkheid" class="au-c-link">Industriemuseum</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://historischehuizen.stad.gent/nl/sint-pietersabdij/toegankelijkheid" class="au-c-link">Sint-Pietersabdij</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://historischehuizen.stad.gent/nl/gravensteen/toegankelijkheid" class="au-c-link">Gravensteen</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.stamgent.be/nl_be/bezoek-het-stam/toegankelijkheid" class="au-c-link">STAM - Stadsmuseum Gent</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
             </ul>
+            <AuContent id="content" class="au-u-margin-bottom-small au-u-margin-top">
+              <p>De URI’s voor de technische integratie zijn beschikbaar op <LinkTo @route="developers.buildings" class="au-c-link">de pagina voor ontwikkelaars</LinkTo>.</p>
+            </AuContent>
           </div>
         </div>
       </div>
@@ -54,14 +168,14 @@
 
     <section class="au-o-region-large au-c-theme-gray-200">
       <div class="au-o-layout  au-o-layout--large">
-        <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Integreer informatie over jouw toegankelijk gebouw in je website.</AuHeading>
+        <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Aan de slag met de toegankelijkheidswijzer</AuHeading>
         <div class="au-o-grid au-o-grid--small">
           <div class="au-o-grid__item au-u-1-2@small">
             <AuCard class="au-u-text-center">
               <AuBadge @icon="pencil" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="3" @skin="4">
-                  Data opmeten en invoeren
+                  Voor musea
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Lees hoe je zelf kan starten met opmeten en invoeren van de gegevens van jouw locatie.</p>
                 <p>
