--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -10,14 +10,7 @@
           <div class="au-o-grid__item au-u-2-4@medium au-c-hero__usp au-c-content au-c-content--large">
             <AuHeading @skin="1" class="au-u-margin-bottom">Wat is Toegankelijk Vlaanderen?</AuHeading>
             <p class="au-c-intro au-u-margin-bottom">
-              Toegankelijk Vlaanderen stuurt mensen, met en zonder beperking, geïnformeerd en met een gerust hart op pad in heel Vlaanderen.
-            </p>
-            <AuHeading @level="2" @skin="3" class="au-u-margin-bottom-small">Hoe doen we dat?</AuHeading>
-            <p>
-              We bouwen een online toepassing die informatie over toegankelijkheid op elke website op dezelfde manier weergeeft.
-            </p>
-            <p>
-              Zo creëren we bewustzijn over toegankelijkheid en moedigen we de kwaliteit van de toegankelijkheid in publieke locaties aan. In Vlaanderen, maar ook daarbuiten.
+              Toegankelijk Vlaanderen is een initiatief van de Vlaamse overheid. Het stuurt iedereen, met en zonder beperking, geïnformeerd en met een gerust hart op pad in heel Vlaanderen.
             </p>
             <p class="au-c-para au-u-margin-top">
               <LinkTo @route="get-started" class="au-c-button au-c-button--large au-u-margin-bottom-small">
@@ -83,51 +76,39 @@
         <div class="au-o-grid au-o-grid--middle au-o-grid--reverse">
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
-              <h2 class="au-c-heading au-c-heading--3">Data opmeten en invoeren</h2>
-              <p>Je kan als museumverantwoordelijke zelf de verzamelde toegankelijkheidsdata invoeren in de nieuwe invoerapplicatie. Inter ondersteunt je indien je vragen hebt en plaatst de data -na validatie- online.</p>
-              <p>Er is een handleiding beschikbaar om zelf informatie te verzamelen:</p>
+              <h2 class="au-c-heading au-c-heading--3">Hoe doen we dat?</h2>
+              <p class="au-u-margin-top-small">
+                We doen dit door informatie over de toegankelijkheid van publieke locaties te verzamelen in de Toegankelijk Vlaanderen databank.
+              </p>
+              <p>
+                Als eerste product van Toegankelijk Vlaanderen ontwikkelden we <LinkTo @route="widget" class="au-c-link">de Toegankelijkheidswijzer</LinkTo>. Dit is een online toepassing, een widget, die informatie over toegankelijkheid op elke website op dezelfde manier toont. Dit zet niet enkel de toegankelijkheidsinformatie in de verf maar zorgt ook voor herkenbaarheid bij de bezoeker.
+              </p>
+              <p>Zo:</p>
               <ul class="au-u-margin-top-small">
-                <li>OPMETEN en VERZAMELEN data <AuPill>Opgelet – handleiding staat niet online</AuPill></li>
+                <li>informeren we mensen met een beperking en hun entourage;</li>
+                <li>creëren we bewustzijn over toegankelijkheid bij het brede publiek;</li>
+                <li>moedigen we de verbetering van kwaliteit van de toegankelijkheid in publieke locaties aan.</li>
               </ul>
-              <p>De invoerapplicatie van de toegankelijkheidswijzer is enkel beschikbaar voor geregistreerde gebruikers. De museumverantwoordelijke kan er zelf de toegankelijkheidsinformatie van het museum en de tentoonstellingen beheren.  De informatie kan op elk moment geactualiseerd worden.</p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
-            <div class="au-c-image au-c-image--transparent">
-              <img src="/assets/images/toevla-mockup-entry.png" alt="Screenshot van de invoerapplicatie">
+            <div class="au-c-youtube-holder">
+              <iframe src="https://www.youtube.com/embed/o9xIJ5qeCjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-          </div>
-        </div>
-        <hr class="au-c-hr au-c-hr--huge">
-        <div class="au-o-grid au-o-grid--middle au-o-grid--reverse">
-          <div class="au-o-grid__item au-u-1-2@medium">
-            <AuContent @skin="large">
-              <h2 class="au-c-heading au-c-heading--3">Gelinkte open data</h2>
-              <p class="au-u-margin-top-small">We delen onze informatie als gelinkte open data. Zo kan deze informatie ook gebruikt worden in andere websites (vb. Uit in Vlaanderen) of kunnen hier nieuwe applicaties mee gebouwd worden.</p>
-            </AuContent>
-          </div>
-          <div class="au-o-grid__item au-u-1-2@medium">
-            <div class="au-c-image">
-              <img src="/assets/images/toevla-mockup-data.svg" alt="Illustratie die data blokken data toont die op verschillende plaatsen gebruikt worden">
-            </div>
+            <p class="au-c-youtube-holder-caption"><LinkTo @route="transcript" class="au-c-link">Lees het tekst transcript van deze video</LinkTo></p>
           </div>
         </div>
         <hr class="au-c-hr au-c-hr--huge">
         <div class="au-o-grid au-o-grid--middle">
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
-              <h2 class="au-c-heading au-c-heading--3">Toegankelijkheidswijzer</h2>
-              <p>De toegankelijkheidswijzer is een vast informatieblok of 'widget' (met museumdata) dat je makkelijk kan integreren in een website. Bezoekers zien steeds de meest actuele toegankelijkheidsinformatie.</p>
-              <ul class="au-u-margin-top-small">
-                <li>Belangrijke informatie wordt bovenaan als icoontjes weergegeven.</li>
-                <li>De toegankelijkheidsinformatie wordt op een compacte manier weergegeven. Je kan de informatieblokken openklappen voor meer details.</li>
-                <li>Een fotogalerij verduidelijkt de beschrijving.</li>
-              </ul>
-              <p>
-                <LinkTo @route="widget" class="au-c-link">
-                  Lees meer over de toegankelijkheidswijzer
-                </LinkTo>
+              <h2 class="au-c-heading au-c-heading--3">Stap mee in het pilootproject!</h2>
+              <p class="au-u-margin-top-small">
+                Wil je als Vlaams museum inzetten op toegankelijkheid?<br>
+                Wil je de bezoekers van jouw museum optimaal informeren?
               </p>
+              <p><strong>Aarzel dan niet en <LinkTo @route="get-started" class="au-c-link">stel je kandidaat</LinkTo>.</strong></p>
+              <p>We zijn van start gegaan met de Gentse stadsmusea en historische huizen, en willen nu de kans bieden aan <strong>40 andere Vlaamse musea</strong> om de Toegankelijkheidswijzer ook op hun website te integreren.  </p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
@@ -136,19 +117,52 @@
             </div>
           </div>
         </div>
+        <hr class="au-c-hr au-c-hr--huge">
+        <div class="au-o-grid au-o-grid--middle au-o-grid--reverse">
+          <div class="au-o-grid__item au-u-1-2@medium">
+            <AuContent @skin="large">
+              <h2 class="au-c-heading au-c-heading--3">Drie stappen en klaar</h2>
+              <ul class="au-u-margin-top-small">
+                <li>Het museum verzamelt via een handige invoerapp hun toegankelijkheidsinformatie;</li>
+                <li>Deze informatie komt in de Toegankelijkheidswijzer;</li>
+                <li>Het museum integreert de Toegankelijkheidswijzer (gemakkelijk) als widget binnen zijn eigen website;</li>
+              </ul>
+              <p>Alle informatie over toegankelijkheid staat duidelijk en uniform op de website van alle musea.</p>
+              <p>
+                <LinkTo @route="get-started" class="au-c-button au-c-button--large">
+                  Aan de slag
+                </LinkTo>
+              </p>
+            </AuContent>
+          </div>
+          <div class="au-o-grid__item au-u-1-2@medium">
+            <div class="au-c-image au-c-image--transparent">
+              <img src="/assets/images/toevla-start.svg" alt="Illustratie van een vrouw die bij een locatie zit.">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="au-o-region-large au-u-border-top">
+      <div class="au-o-layout au-o-layout--large">
+        <AuContent @skin="large" class="au-u-content-center">
+          <h2 class="au-c-heading au-c-heading--3">Wie is de uitgever?</h2>
+          <p>De Toegankelijkheidswijzer is een product van Toegankelijk Vlaanderen, een initiatief van de Vlaamse minister van Gelijke Kansen, Bart Somers, in samenwerking met het Agentschap Binnenlands Bestuur en Inter (het Agentschap Toegankelijk Vlaanderen). </p>
+        </AuContent>
       </div>
     </section>
 
     <section class="au-o-region-large au-c-theme-gray-200">
       <div class="au-o-layout  au-o-layout--large">
-        <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Integreer informatie over jouw toegankelijk gebouw in je website.</AuHeading>
+        <AuHeading @level="2" @skin="3" class="au-u-margin-bottom">Aan de slag met de toegankelijkheidswijzer</AuHeading>
         <div class="au-o-grid au-o-grid--small">
           <div class="au-o-grid__item au-u-1-2@small au-u-1-3@medium">
             <AuCard class="au-u-text-center">
               <AuBadge @icon="pencil" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="3" @skin="4">
-                  Data opmeten en invoeren
+                  Voor musea
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Lees hoe je zelf kan starten met opmeten en invoeren van de gegevens van jouw locatie.</p>
                 <p>
@@ -164,7 +178,7 @@
               <AuBadge @icon="sitemap" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="3" @skin="4">
-                  Gebouwen
+                  Voor gebruikers
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Een overzicht van de gebouwen waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
                 <p>
