--- a/app/templates/developers/intro.hbs
+++ b/app/templates/developers/intro.hbs
@@ -9,7 +9,7 @@
   @language="html" />
 
 <AuHeading @level="3" @skin="3">2. Vervang de resource URI</AuHeading>
-<p>Zoek op deze <LinkTo @route="buildings" class="au-c-link">overzichtpagina</LinkTo> de resource URI code van uw gebouw.</p>
+<p>Zoek op deze <LinkTo @route="developers.buildings" class="au-c-link">overzichtpagina</LinkTo> de resource URI code van uw gebouw.</p>
 
 <p>Zet uw resource URI op de juiste plaats in de widget code. U plaatst deze onder <CodeInline @code='resource=""' @language="html" />. De waarde is een combinatie van <CodeInline @code='http://data.toegankelijk.vlaanderen.be/id/widgets/' @language="html" /> + <strong>een unieke identificatie code</strong>.</p>
 
